--- a/views/index.html
+++ b/views/index.html
@@ -1,48 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+		<title>Strona główna</title>
 
-    <script src="https://kit.fontawesome.com/2e3d9b3214.js" crossorigin="anonymous"></script>
+		<script src="https://kit.fontawesome.com/2e3d9b3214.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="/style.css">
+	</head>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<body>
+		<div class="container-fluid">
+			<nav class="navbar navbar-expand-md navbar-dark bg-black" style="min-height: 12.5vh">
+				<a class="navbar-brand" href="/">
+				  	<img src="/img/logo.png" style="max-height: 90px;">
+				</a>
 
-    <link rel="stylesheet" href="style.css">
-</head>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColl" aria-controls="navbarColl" aria-expanded="false">
+				  	<span class="navbar-toggler-icon"></span>
+				</button>
 
-<body>
-    <div class="container-fluid">
-        <div class="menu-btn">
-            <span class="menu-btn__burger"></span>
-        </div>
+				<div class="collapse navbar-collapse" id="navbarColl">
+					<ul class="navbar-nav ml-auto font-weight-bold">
+						<li class="nav-item mx-sm-0 mx-md-3">
+							<a class="nav-link" href="/discounts">Zniżki</a>
+						</li>
+						<li class="nav-item mx-sm-0 mx-md-3">
+							<a class="nav-link" href="/blog">Blog</a>
+						</li>
+						<li class="nav-item mx-sm-0 mx-md-3">
+							<a class="nav-link" href="/about-us">Poznaj nas</a>
+						</li>
+						<li class="nav-item mx-sm-0 mx-md-3">
+							<a class="nav-link" href="/contact-us">Kontakt</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
 
-        <nav class="nav">
-            <img src="/img/logo.png" alt="">
-            <ul class="menu-nav">
-                <li class="item"><a class="link" href="#">Blog</a></li>
-                <li class="item"><a class="link" href="#">Zniżki</a></li>
-                <li class="item"><a class="link" href="#">Poznaj nas</a></li>
-                <li class="item"><a class="link" href="#">Produkty</a></li>
-                <li class="item"><a class="link" href="#">Kontakt</a></li>
-            </ul>
-        </nav>
+			<div class="banner">
+				<div class="brightness"></div>
+				<div class="headings">
+					<h1>Samorząd Uczniowski</h1>
+					<h2>XLII LO</h2>
+					<h3>"Per aspera ad astra"</h3>
+				</div>
+			</div>
 
-        <div class="banner"></div>
-        <div class="bar">
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook-f"></i>
-        </div>
-        <footer>
-            <p>Copyright &copy; 2020 SU XLII Lo Kraków </p>
-        </footer>
-    </div>
+			<div class="bar">
+				<i class="fab fa-instagram"></i>
+				<i class="fab fa-facebook-f"></i>
+			</div>
 
-    <script src="script.js"></script>
-</body>
+			<footer>
+				<p>Copyright &copy; 2020 SU XLII Lo Kraków </p>
+			</footer>
+		</div>
 
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	</body>
 </html>
