--- a/resources/scss/_menu.scss
+++ b/resources/scss/_menu.scss
@@ -1,95 +1,19 @@
-.menu-btn {
-    position: absolute;
-    z-index: 3;
-    right: 1rem;
-    top: 5vh;
-    height: 20px;
-    width: 28px;
-    cursor: pointer;
-    @include transition-ease;
-    visibility: visible;
-
-    &__burger {
-        position: absolute;
-        right: 0;
-        top: 0.5rem;
-        width: 28px;
-        height: 3px;
-        background: $second-color;
-        @include transition-ease;
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: -8px;
-            width: 28px;
-            height: 3px;
-            background: $second-color;
-        }
-
-        &::after {
-            content: '';
-            position: absolute;
-            top: 8px;
-            width: 20px;
-            height: 3px;
-            background: $second-color;
-        }
-
-        &.open {
-            transform: rotate(720deg);
-            background: transparent;
-
-            &::before {
-                transform: rotate(45deg) translate(5px, 8px);
-            }
-
-            &::after {
-                width: 28px;
-                transform: rotate(-45deg) translate(3px, -7px);
-            }
-        }
-    }
+img {
+    height: 10vh;
 }
 
-nav {
-    height: 12.5vh;
-    position: relative;
+.link {
+    padding: 0 1rem;
+    color: $second-color;
+    font-size: 1rem;
+    @include transition-ease;
+}
+
+.link:hover {
+    color: $third-color;
+    text-decoration: none;
+}
+
+.menuBar {
     background: $main-color;
-
-    img {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        left: 1rem;
-        height: 90%;
-        z-index: 3;
-    }
-
-    .menu-nav {
-        height: 100vh;
-        width: 100%;
-        // overflow: hidden;
-        background: $main-color;
-        transform: translateY(-100%);
-        z-index: 2;
-        @include transition-ease;
-        @include center;
-        flex-direction: column;
-
-        &.open {
-            transform: translateY(0);
-        }
-
-        .item {
-            list-style-type: none;
-            margin-top: 1rem;
-
-            .link {
-                text-decoration: none;
-                color: $third-color;
-                font-size: 1.5rem;
-            }
-        }
-    }
 }
