--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1,4 +1,6 @@
 $main-color:#000;
 $second-color:#fff;
 $third-color:#e49e00;
+$about-bg-color:#111;
 $font-size:10px;
+$font-style: 'Roboto', sans-serif;
