--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -1,8 +1,13 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 
-@import 'variables';
 @import 'mixins';
+@import 'variables';
 @import 'reset';
 @import 'menu';
+@import 'footer';
 @import 'responsive';
+@import 'homepage';
+@import 'about';
+@import 'discounts';
+@import 'contact';
 @import 'customization';
