--- a/strona/scss/main.scss
+++ b/strona/scss/main.scss
@@ -2,42 +2,9 @@
 @import 'variables';
 @import 'reset';
 @import 'menu';
+@import 'footer';
 @import 'responsive';
-
-
-
-body {
-    overflow: hidden;
-}
-
-.banner {
-    height: 70vh;
-    background-image: url(../img/_DSC4427.jpg);
-    background-size: cover;
-    filter: brightness(0.5);
-}
-
-.bar {
-    height: 12.5vh;
-    background: $main-color;
-    @include center;
-
-    i {
-        font-size: 2rem;
-        color: $third-color;
-        padding: 1rem;
-        z-index: 3;
-    }
-}
-
-footer {
-    height: 5vh;
-    background: $third-color;
-    @include center;
-
-    p {
-        font-size: .8rem;
-        margin: 0;
-        color: $second-color;
-    }
-}
+@import 'homepage';
+@import 'about';
+@import 'discounts';
+@import 'contact';
