--- a/strona/scss/main.scss
+++ b/strona/scss/main.scss
@@ -4,7 +4,9 @@
 @import 'menu';
 @import 'footer';
 @import 'responsive';
+@import 'responsiveBlog';
 @import 'homepage';
 @import 'about';
 @import 'discounts';
 @import 'contact';
+@import 'blogHomepage';
