--- a/strona/css/main.css
+++ b/strona/css/main.css
@@ -11,90 +11,30 @@
   height: 100vh;
 }
 
-.menu-btn {
-  position: absolute;
-  z-index: 3;
-  right: 1rem;
-  top: 5vh;
-  height: 20px;
-  width: 28px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  visibility: visible;
-}
-
-.menu-btn__burger {
-  position: absolute;
-  right: 0;
-  top: 0.5rem;
-  width: 28px;
-  height: 3px;
-  background: #fff;
+.link {
+  padding: 0 1rem;
+  color: #fff;
+  font-size: 1rem;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
-.menu-btn__burger::before {
-  content: '';
-  position: absolute;
-  top: -8px;
-  width: 28px;
-  height: 3px;
-  background: #fff;
+.link:hover {
+  color: #e49e00;
+  text-decoration: none;
 }
 
-.menu-btn__burger::after {
-  content: '';
-  position: absolute;
-  top: 8px;
-  width: 20px;
-  height: 3px;
-  background: #fff;
-}
-
-.menu-btn__burger.open {
-  -webkit-transform: rotate(720deg);
-          transform: rotate(720deg);
-  background: transparent;
-}
-
-.menu-btn__burger.open::before {
-  -webkit-transform: rotate(45deg) translate(5px, 8px);
-          transform: rotate(45deg) translate(5px, 8px);
-}
-
-.menu-btn__burger.open::after {
-  width: 28px;
-  -webkit-transform: rotate(-45deg) translate(3px, -7px);
-          transform: rotate(-45deg) translate(3px, -7px);
-}
-
-nav {
-  height: 12.5vh;
-  position: relative;
+.menuBar {
   background: #000;
 }
 
-nav img {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  left: 1rem;
-  height: 90%;
-  z-index: 3;
+.blog-menuBar {
+  background: #e49e00;
 }
 
-nav .menu-nav {
-  height: 100vh;
-  width: 100%;
-  background: #000;
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
-  z-index: 2;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
+footer {
+  height: 5vh;
+  background: #e49e00;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -104,76 +44,327 @@ nav .menu-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
-nav .menu-nav.open {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+footer p {
+  margin: 0;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
 }
 
-nav .menu-nav .item {
-  list-style-type: none;
-  margin-top: 1rem;
+@media screen and (min-width: 280px) {
+  .container-fluid {
+    overflow-x: hidden;
+  }
+  .headings h1 {
+    font-size: 2rem;
+  }
+  .headings h2 {
+    font-size: 1.5rem;
+  }
+  .headings h3 {
+    font-size: 1rem;
+  }
+  .menuBar {
+    min-height: 15vh;
+  }
+  .bar {
+    height: 15vh;
+  }
+  footer p {
+    font-size: .7rem;
+  }
+  .header h1 {
+    font-size: 2rem;
+  }
+  .about .img {
+    height: 70vh;
+  }
+  .about .text {
+    height: 70vh;
+  }
+  .about .text h1 {
+    font-size: 1.6rem;
+  }
+  .about .text h2 {
+    font-size: 1.4rem;
+  }
+  .about .text p {
+    font-size: .8rem;
+  }
+  .discounts .image {
+    height: 70vh;
+  }
+  .contact {
+    height: 80vh;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    margin: 1rem;
+  }
+  form {
+    margin: 1rem;
+    padding: 1rem;
+    width: 100vw;
+    height: 100%;
+  }
+  form h1 {
+    font-size: 1.5rem;
+    margin: .5rem 0;
+    padding: .5rem 0;
+  }
+  form input {
+    margin: .5rem 0;
+    padding: .5rem 0;
+  }
+  form ::-webkit-input-placeholder {
+    margin: .5rem 0;
+    padding: .5rem 0;
+  }
+  form :-ms-input-placeholder {
+    margin: .5rem 0;
+    padding: .5rem 0;
+  }
+  form ::-ms-input-placeholder {
+    margin: .5rem 0;
+    padding: .5rem 0;
+  }
+  form ::placeholder {
+    margin: .5rem 0;
+    padding: .5rem 0;
+  }
+  form textarea {
+    margin: .5rem 0;
+  }
+  form button {
+    width: 40%;
+    border: 2px solid #fff;
+    background-color: transparent;
+    color: #fff;
+    padding: .5rem;
+  }
 }
 
-nav .menu-nav .item .link {
-  text-decoration: none;
-  color: #e49e00;
-  font-size: 1.5rem;
+@media screen and (min-width: 768px) {
+  .headings h1 {
+    font-size: 3rem;
+  }
+  .headings h2 {
+    font-size: 2.5rem;
+  }
+  .headings h3 {
+    font-size: 2rem;
+  }
+  .menuBar {
+    min-height: 12.5vh;
+  }
+  .bar {
+    height: 12.5vh;
+  }
+  footer p {
+    font-size: 1rem;
+  }
+  .header h1 {
+    font-size: 3rem;
+  }
+  .about .text h1 {
+    font-size: 3rem;
+  }
+  .about .text h2 {
+    font-size: 2.5rem;
+  }
+  .about .text p {
+    font-size: 1.5rem;
+    padding: 5rem;
+  }
+  .discounts .image {
+    height: 80vh;
+  }
+  .contact {
+    height: 85vh;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  form {
+    margin: 2rem;
+    padding: 2rem;
+    width: 60vh;
+    height: 60vh;
+  }
+  form h1 {
+    font-size: 2rem;
+    margin: 1rem 0;
+    padding: 1rem 0;
+  }
+  form input {
+    margin: .8rem 0;
+    padding: .8rem 0;
+  }
+  form ::-webkit-input-placeholder {
+    margin: .8rem 0;
+    padding: .8rem 0;
+  }
+  form :-ms-input-placeholder {
+    margin: .8rem 0;
+    padding: .8rem 0;
+  }
+  form ::-ms-input-placeholder {
+    margin: .8rem 0;
+    padding: .8rem 0;
+  }
+  form ::placeholder {
+    margin: .8rem 0;
+    padding: .8rem 0;
+  }
+  form button {
+    width: 40%;
+    border: 2px solid #fff;
+    background-color: transparent;
+    color: #fff;
+    padding: .5rem;
+  }
 }
 
 @media screen and (min-width: 992px) {
-  .menu-btn {
-    visibility: hidden;
+  .headings h1 {
+    font-size: 5rem;
   }
-  .nav {
-    position: relative;
+  .headings h2 {
+    font-size: 4.5rem;
   }
-  .nav .menu-nav {
-    position: absolute;
-    right: 0;
-    height: 100%;
-    width: 70%;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    margin: 0;
+  .headings h3 {
+    font-size: 3rem;
   }
-  .nav .menu-nav .item {
-    margin: 1.5rem;
+  footer p {
+    font-size: 1rem;
   }
-  .nav .menu-nav .item .link {
-    color: #fff;
+  .discounts .image {
+    height: 40vh;
   }
 }
 
-body {
-  overflow: hidden;
+@media screen and (min-width: 1200px) {
+  .header h1 {
+    font-size: 4rem;
+  }
+  .about .text h1 {
+    font-size: 3rem;
+  }
+  .about .text h2 {
+    font-size: 2.5rem;
+  }
+  .about .text p {
+    font-size: 1.3rem;
+    padding: 5rem;
+  }
+  .discounts .image {
+    height: 55vh;
+  }
+}
+
+@media screen and (max-width: 900px) and (orientation: landscape) {
+  .bar {
+    height: 15vh;
+  }
+  .about .img {
+    height: 150vh;
+  }
+  .about .text {
+    height: 120vh;
+  }
+  .about .text h1 {
+    font-size: 1.6rem;
+  }
+  .about .text h2 {
+    font-size: 1.4rem;
+  }
+  .about .text p {
+    font-size: .8rem;
+  }
+  .discounts .image {
+    height: 200vh;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    display: none;
+  }
+  .wraperMobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    width: 100%;
+    height: 100vh;
+  }
+  .wraperMobile {
+    display: none;
+  }
+}
+
+.bg {
+  background-color: #111;
 }
 
 .banner {
   height: 70vh;
-  background-image: url(../img/_DSC4427.jpg);
+  background: url(../img/_DSC4427.jpg);
   background-size: cover;
-  -webkit-filter: brightness(0.5);
-          filter: brightness(0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.banner .brightness {
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.5;
+}
+
+.banner .headings {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  z-index: 2;
+  width: 100vw;
+}
+
+.banner .headings h1 {
+  color: #e49e00;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-weight: 400;
+}
+
+.banner .headings h2 {
+  color: #e49e00;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-weight: 400;
+}
+
+.banner .headings h3 {
+  color: #e49e00;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-style: italic;
+  font-weight: 300;
 }
 
 .bar {
-  height: 12.5vh;
   background: #000;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -193,9 +384,11 @@ body {
   z-index: 3;
 }
 
-footer {
-  height: 5vh;
-  background: #e49e00;
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+.header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -207,9 +400,431 @@ footer {
   display: flex;
 }
 
-footer p {
-  font-size: .8rem;
-  margin: 0;
+.header h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  color: #e49e00;
+}
+
+.about .img {
+  background-color: #000;
+}
+
+.about .bartek {
+  background: url(../img/_DSC4453.jpg);
+  background-size: cover;
+}
+
+.about .ania {
+  background: url(../img/_DSC4459.jpg);
+  background-size: cover;
+}
+
+.about .aga {
+  background: url(../img/_DSC4462.jpg);
+  background-size: cover;
+}
+
+.about .krzysiek {
+  background: url(../img/_DSC4498.jpg);
+  background-size: cover;
+}
+
+.about .ala {
+  background: url(../img/_DSC4481.jpg);
+  background-size: cover;
+}
+
+.about .emilia {
+  background: url(../img/_DSC4467.jpg);
+  background-size: cover;
+}
+
+.about .text {
+  background-color: #000;
+}
+
+.about .text h1 {
+  color: #e49e00;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.about .text h2 {
   color: #fff;
+  margin: 0 auto;
+}
+
+.about .text p {
+  color: #fff;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.discounts .image {
+  position: relative;
+  overflow-x: hidden;
+}
+
+.discounts .hardrock {
+  background: url(../img/Hard_Rock_Cafe_-_wspolpraca.jpg) center;
+  background-size: 95%;
+  background-repeat: no-repeat;
+}
+
+.discounts .starbucks {
+  background: url(../img/starbucks_-_wspolpraca.jpg) center;
+  background-size: 95%;
+  background-repeat: no-repeat;
+}
+
+.discounts .gym {
+  background: url(../img/RK_-_wspolpraca.jpg) center;
+  background-size: 95%;
+  background-repeat: no-repeat;
+}
+
+.discounts .restaurant {
+  background: url(../img/Mamma_mia_-_wspolpraca.jpg) center;
+  background-size: 95%;
+  background-repeat: no-repeat;
+}
+
+.discounts .restaurant2 {
+  background: url(../img/RetroInk_-_wspolpraca.jpg) center;
+  background-size: 95%;
+  background-repeat: no-repeat;
+}
+
+.discounts .club {
+  background: url(../img/RIN_-_wspolpraca.jpg) center;
+  background-size: 95%;
+  background-repeat: no-repeat;
+}
+
+.contact {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #e49e00;
+}
+
+form h1 {
+  height: 10%;
+  color: #fff;
+}
+
+form input {
+  height: 10%;
+  background-color: transparent;
+  border-style: none;
+  border-bottom: 2px solid #fff;
+  color: #fff;
+}
+
+form ::-webkit-input-placeholder {
+  color: #fff;
+}
+
+form :-ms-input-placeholder {
+  color: #fff;
+}
+
+form ::-ms-input-placeholder {
+  color: #fff;
+}
+
+form ::placeholder {
+  color: #fff;
+}
+
+form textarea {
+  background-color: transparent;
+  height: 60%;
+  border: none;
+  color: #fff;
+}
+
+form textarea:checked {
+  border: none;
+}
+
+form .buttonNote {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+form .buttonNote button {
+  border: 2px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+form .buttonNote button:hover {
+  background-color: #000;
+}
+
+form .buttonNote i {
+  font-size: 2rem;
+  color: #fff;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+form .buttonNote i:hover {
+  -webkit-animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+          animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+  color: #000;
+}
+
+@-webkit-keyframes shake {
+  10% {
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0);
+  }
+  20% {
+    -webkit-transform: translate3d(2px, 0, 0);
+            transform: translate3d(2px, 0, 0);
+  }
+  30% {
+    -webkit-transform: translate3d(-4px, 0, 0);
+            transform: translate3d(-4px, 0, 0);
+  }
+  40% {
+    -webkit-transform: translate3d(4px, 0, 0);
+            transform: translate3d(4px, 0, 0);
+  }
+  50% {
+    -webkit-transform: translate3d(-4px, 0, 0);
+            transform: translate3d(-4px, 0, 0);
+  }
+  60% {
+    -webkit-transform: translate3d(4px, 0, 0);
+            transform: translate3d(4px, 0, 0);
+  }
+  70% {
+    -webkit-transform: translate3d(-4px, 0, 0);
+            transform: translate3d(-4px, 0, 0);
+  }
+  80% {
+    -webkit-transform: translate3d(2px, 0, 0);
+            transform: translate3d(2px, 0, 0);
+  }
+  90% {
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0);
+  }
+}
+
+@keyframes shake {
+  10% {
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0);
+  }
+  20% {
+    -webkit-transform: translate3d(2px, 0, 0);
+            transform: translate3d(2px, 0, 0);
+  }
+  30% {
+    -webkit-transform: translate3d(-4px, 0, 0);
+            transform: translate3d(-4px, 0, 0);
+  }
+  40% {
+    -webkit-transform: translate3d(4px, 0, 0);
+            transform: translate3d(4px, 0, 0);
+  }
+  50% {
+    -webkit-transform: translate3d(-4px, 0, 0);
+            transform: translate3d(-4px, 0, 0);
+  }
+  60% {
+    -webkit-transform: translate3d(4px, 0, 0);
+            transform: translate3d(4px, 0, 0);
+  }
+  70% {
+    -webkit-transform: translate3d(-4px, 0, 0);
+            transform: translate3d(-4px, 0, 0);
+  }
+  80% {
+    -webkit-transform: translate3d(2px, 0, 0);
+            transform: translate3d(2px, 0, 0);
+  }
+  90% {
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0);
+  }
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: hidden;
+  /* Enable scroll if needed */
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #000;
+  padding: 20px;
+  width: 40vh;
+  height: 40vh;
+  margin: auto auto;
+}
+
+.modal-content p {
+  font-size: 1rem;
+  color: #fff;
+  text-align: center;
+  margin: auto auto;
+}
+
+.close {
+  color: #e49e00;
+  margin-left: 95%;
+  font-size: 28px;
+}
+
+.close:hover,
+.close:focus {
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.blog-bg {
+  background-color: #fff;
+}
+
+.wrapper .column1 {
+  width: 60%;
+  height: 100%;
+}
+
+.wrapper .column1 .row1 {
+  width: 100%;
+  height: 60%;
+}
+
+.wrapper .column1 .row1 .col1 {
+  height: 100%;
+  width: 50%;
+  background-color: blue;
+}
+
+.wrapper .column1 .row1 .col2 {
+  height: 100%;
+  width: 50%;
+}
+
+.wrapper .column1 .row1 .col2 .col3 {
+  width: 100%;
+  height: 50%;
+  background-color: red;
+}
+
+.wrapper .column1 .row1 .col2 .col4 {
+  width: 100%;
+  height: 50%;
+  background-color: black;
+}
+
+.wrapper .column1 .row2 {
+  width: 100%;
+  height: 40%;
+  background-color: green;
+}
+
+.wrapper .column2 {
+  width: 40%;
+  height: 100%;
+}
+
+.wrapper .column2 .row3 {
+  width: 100%;
+  height: 55%;
+}
+
+.wrapper .column2 .row3 .col5 {
+  width: 50%;
+  height: 100%;
+  background-color: purple;
+}
+
+.wrapper .column2 .row3 .col6 {
+  width: 50%;
+  height: 100%;
+  background-color: pink;
+}
+
+.wrapper .column2 .row4 {
+  width: 100%;
+  height: 45%;
+  background-color: orange;
+}
+
+.wraperMobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 700vh;
+}
+
+.wraperMobile .div {
+  height: 50vh;
+  width: 100%;
+  position: relative;
+}
+
+.wraperMobile .div .yellowbar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 15%;
+  background: #e49e00;
 }
 /*# sourceMappingURL=main.css.map */
