Front end zrobiony
Oby nie było błędów bo mi się nie chce

--- a/strona/scss/_discounts.scss
+++ b/strona/scss/_discounts.scss
@@ -4,6 +4,11 @@
     .image {
         position: relative;
         overflow-x: hidden;
+        @include transition-ease;
+    }
+
+    .image:hover {
+        transform: scale(1.05);
     }
 
     .hardrock {
