--- a/strona/scss/_variables.scss
+++ b/strona/scss/_variables.scss
@@ -1,7 +1,8 @@
 $main-color:#000;
 $second-color:#fff;
 $third-color:#e49e00;
-$about-bg-color:#111;
+$fourth-color:#59191f;
+$about-bg-color:rgb(8, 8, 8);
 $font-size:10px;
 $font-style: 'Roboto',
 sans-serif;
