--- a/strona/scss/_blogHomepage.scss
+++ b/strona/scss/_blogHomepage.scss
@@ -1,95 +1,74 @@
-.blog-bg {
-    background-color: $second-color;
+.blogH1 {
+    color: $main-color;
+    font-weight: 300;
+    margin: 0;
 }
 
-.wrapper {
-    .column1 {
-        width: 60%;
+.wrapperDesktop {
+    a {
+        width: 100%;
         height: 100%;
-
-        .row1 {
-            width: 100%;
-            height: 60%;
-
-            .col1 {
-                height: 100%;
-                width: 50%;
-                background-color: blue;
-            }
-
-            .col2 {
-                height: 100%;
-                width: 50%;
-
-                .col3 {
-                    width: 100%;
-                    height: 50%;
-                    background-color: red;
-                }
-
-                .col4 {
-                    width: 100%;
-                    height: 50%;
-                    background-color: black;
-                }
-            }
-        }
-
-        .row2 {
-            width: 100%;
-            height: 40%;
-            background-color: green;
-        }
     }
-
-    .column2 {
-        width: 40%;
-        height: 100%;
-
-        .row3 {
-            width: 100%;
-            height: 55%;
-
-            .col5 {
-                width: 50%;
-                height: 100%;
-                background-color: purple;
-            }
-
-            .col6 {
-                width: 50%;
-                height: 100%;
-                background-color: pink;
-            }
-        }
-
-        .row4 {
-            width: 100%;
-            height: 45%;
-            background-color: orange;
-        }
-    }
-
 }
 
-.wraperMobile {
-    display: flex;
+.wrapperMobile {
     width: 100%;
-    height: 700vh;
+    min-height: auto;
 
 
     .div {
         height: 50vh;
         width: 100%;
         position: relative;
-
-        .yellowbar {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 15%;
-            background: $third-color;
-        }
     }
+
+
+}
+
+.yellowbar {
+
+    background: $third-color;
+    position: absolute;
+    @include center;
+    @include transition-ease;
+
+    p {
+        font-size: 1.5rem;
+        color: $second-color;
+        margin: 0;
+        @include transition-ease;
+        font-weight: 300;
+    }
+}
+
+.article {
+    background: url(../img/old-newspaper-350376_640.jpg);
+    background-size: cover;
+
+}
+
+.feuilleton {
+    background: url(../img/microphone-5594702_640.jpg) center;
+    background-size: cover;
+}
+
+.interview {
+
+    background: url(../img/writing-1209121_640.jpg) bottom;
+    background-size: cover;
+}
+
+.review {
+    background: url(../img/breakfast-1869772_640.jpg) center center;
+    background-size: cover;
+}
+
+.story {
+    background: url(../img/storytelling-4229843_640.jpg)center;
+    background-size: cover;
+}
+
+.poetryCorner {
+    background: url(../img/pen-4163403_640.jpg);
+    background-size: cover;
 }
