--- a/strona/scss/_menu.scss
+++ b/strona/scss/_menu.scss
@@ -1,19 +1,188 @@
-.link {
-    padding: 0 1rem;
-    color: $second-color;
-    font-size: 1rem;
-    @include transition-ease;
+// .link {
+//     padding: 0 1rem;
+//     color: $second-color;
+//     font-size: 1.2rem;
+//     @include transition-ease;
+// }
+
+// .link:hover {
+//     color: $third-color;
+//     text-decoration: none;
+// }
+
+// .menuBar {
+//     background: $main-color;
+// }
+
+// .blog-menuBar {
+//     background: $third-color;
+// }
+
+// .linkBlog:hover {
+//     color: #000;
+// }
+
+.black {
+    background-color: $main-color;
 }
 
-.link:hover {
+.black2 {
+    background-color: $about-bg-color;
+}
+
+.yellow {
+    background-color: $third-color;
+}
+
+.yellowc {
     color: $third-color;
-    text-decoration: none;
 }
 
-.menuBar {
-    background: $main-color;
+.white {
+    background-color: $second-color;
+
 }
 
-.blog-menuBar {
-    background: $third-color;
+.whitec {
+    color: $second-color;
+}
+
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+
+    a {
+        padding: 0 1rem;
+        font-size: 1.3rem;
+        @include transition-ease;
+    }
+
+    a:hover {
+        color: $second-color;
+        text-decoration: none;
+    }
+
+}
+
+.menu {
+    top: 0;
+    left: 0;
+    align-items: center;
+    justify-content: space-between;
+    height: 15vh;
+    z-index: 6;
+
+    img {
+        height: 90px;
+    }
+
+    .burger {
+        width: 45px;
+        height: 45px;
+        z-index: 4;
+        cursor: pointer;
+        position: relative;
+        @include transition-ease;
+
+        &__bars {
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateX(-50%);
+            width: 28px;
+            height: 3px;
+            background-color: $second-color;
+            @include transition-ease;
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: -8px;
+                width: 28px;
+                height: 3px;
+                background-color: $second-color;
+
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 8px;
+                width: 20px;
+                height: 3px;
+                background-color: $second-color;
+            }
+
+            &.open {
+                transform: rotate(720deg);
+                background: transparent;
+
+
+                &::before {
+                    transform: rotate(45deg) translate(5px, 8px);
+                }
+
+                &::after {
+                    width: 28px;
+                    transform: rotate(-45deg) translate(3px, -7px);
+                }
+            }
+        }
+    }
+
+
+}
+
+.menu-drop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 100vh;
+    transform: translateY(-100%);
+    z-index: 3;
+    flex-direction: column;
+    @include transition-ease;
+
+    .menu-bar {
+        height: 15vh;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        img {
+            height: 90px;
+        }
+    }
+
+    .list {
+        height: 70vh;
+        @include center;
+        flex-direction: column;
+
+        a {
+            font-size: 1.5rem;
+            color: $third-color;
+            margin: .5rem 0;
+            text-decoration: none;
+        }
+    }
+
+    .menu-IconBar {
+        height: 15vh;
+        @include center;
+
+        i {
+            font-size: 2rem;
+        }
+    }
+
+}
+
+.open {
+    transform: translateY(0);
 }
